[project]
name = "functions-tokenizer"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Shohei Nagata", email = "7954174+shohei1029@users.noreply.github.com" }
]
dependencies = [
    "tiktoken~=0.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
